artf496357: [Opera]Alignment mismatches for load test results graph artf498842: Host field in the Add configurations page allows special characters - This should be restricted from the UI artf498047: Feature description popup has a scroll bar which is not refreshed every time when its opened artf495405: There is no select all check box option available for the Configure report window under the Report tab artf498791: while selecting check box for Project-Info-Report it should select all below reports  in Report tab,issues fixed

--- a/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
+++ b/framework/phresco-framework-web/src/main/webapp/themes/photon/css/phresco.css
@@ -3531,8 +3531,6 @@ table {
     background:url(../../../images/r_arrowclose.png) no-repeat 3%;
     padding-left:5%;
     width:92%;
-    /* padding-bottom:9px;
-    padding-top:9px; */
     line-height: 25px;
 }
 
@@ -4780,7 +4778,25 @@ a[id='androidSigning']:hover {
 	margin-left: 75px;
 	text-align: justify;
 }
+
+.report-header1 { 
+	padding:2px 0 5px 10px; 
+	width :28%;
+}
+
+.report_scroll { 
+	overflow: auto; 
+	height: 181px;
+}
+
+#availableReports { 
+	text-align: left; 
+	margin-bottom: 12px; 
+	margin-left: 5px;
+}
+
 /** All list page css**/
+
 .checkbox_list {
     width:0.1%;
 }
